增加Redis基础配置

--- a/login-service/src/main/resources/application.properties
+++ b/login-service/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name= software-login-server
-server.port= 8089
+server.port= 8090
 spring.datasource.username=root
 #spring.datasource.url=jdbc:mysql://localhost:3306/?serverTimezone=UTC&useSSL=false&useUnicode=true&characterEncoding=UTF8
 #spring.datasource.password=123456
@@ -12,3 +12,21 @@ eureka.client.serviceUrl.defaultZone= http://10.176.22.104:8716/eureka/
 eureka.instance.prefer-ip-address= true
 eureka.instance.instance-id=${spring.application.name}:${spring.cloud.client.ip-address}:${server.port}
 eureka.instance.lease-renewal-interval-in-seconds=5
+
+# redis服务器地址
+spring.redis.host=redis-10636.c326.us-east-1-3.ec2.cloud.redislabs.com
+# redis端口
+spring.redis.port=10636
+spring.redis.password=xIXIA9w0yetOgEUJe1M17Jg39us6vhep
+# redis数据库
+spring.redis.database=0
+# redis连接超时时间
+spring.redis.timeout=1800000
+# redis连接池最大数量
+spring.redis.lettuce.pool.max-active=20
+# redis最大阻塞等待时间（负数表示没有限制）
+spring.redis.lettuce.pool.max-wait=-1
+# redis连接池中最大空闲数量
+spring.redis.lettuce.pool.max-idle=5
+# redis连接池中最小空闲数量
+spring.redis.lettuce.pool.min-idle=0
